fix: translateY change to remove any visible parts

--- a/css/style.css
+++ b/css/style.css
@@ -175,7 +175,7 @@ h3 {
         left: 0;
         z-index: -1;
         transition: all 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
-        transform: translateY(-125%) rotate(-5deg);
+        transform: translateY(-100%) rotate(-5deg);
     }
     .main-nav ol li:nth-of-type(2):hover a {
         color: #222;
@@ -196,7 +196,7 @@ h3 {
         left: 0;
         z-index: -1;
         transition: all 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
-        transform: translateY(-125%) rotate(-5deg);
+        transform: translateY(-100%) rotate(-5deg);
     }
     .main-nav ol li:nth-of-type(3):hover a {
         color: #222;
@@ -217,7 +217,7 @@ h3 {
         left: 0;
         z-index: -1;
         transition: all 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
-        transform: translateY(-125%) rotate(-5deg);
+        transform: translateY(-100%) rotate(-5deg);
     }
     .main-nav ol li:nth-of-type(4):hover a {
         color: #222;
@@ -238,7 +238,7 @@ h3 {
         left: 0;
         z-index: -1;
         transition: all 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
-        transform: translateY(-125%) rotate(-5deg);
+        transform: translateY(-100%) rotate(-5deg);
     }
     .main-nav ol li:nth-of-type(5):hover a {
         color: #222;
@@ -259,7 +259,7 @@ h3 {
         left: 0;
         z-index: -1;
         transition: all 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
-        transform: translateY(-125%) rotate(-5deg);
+        transform: translateY(-100%) rotate(-5deg);
     }
     .main-nav ol li:nth-of-type(6):hover a {
         color: #222;
@@ -280,7 +280,7 @@ h3 {
         left: 0;
         z-index: -1;
         transition: all 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
-        transform: translateY(-125%) rotate(-5deg);
+        transform: translateY(-100%) rotate(-5deg);
     }
     .main-nav ol li:nth-of-type(7):hover a {
         color: #222;
@@ -301,7 +301,7 @@ h3 {
         left: 0;
         z-index: -1;
         transition: all 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
-        transform: translateY(-125%) rotate(-5deg);
+        transform: translateY(-100%) rotate(-5deg);
     }
     .main-nav ol li:nth-of-type(8):hover a {
         color: #222;
@@ -322,7 +322,7 @@ h3 {
         left: 0;
         z-index: -1;
         transition: all 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
-        transform: translateY(-125%) rotate(-5deg);
+        transform: translateY(-100%) rotate(-5deg);
     }
     .main-nav ol li:nth-of-type(9):hover a {
         color: #222;
@@ -343,7 +343,7 @@ h3 {
         left: 0;
         z-index: -1;
         transition: all 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
-        transform: translateY(-125%) rotate(-5deg);
+        transform: translateY(-100%) rotate(-5deg);
     }
     .main-nav ol li:nth-of-type(10):hover a {
         color: #222;
@@ -364,7 +364,7 @@ h3 {
         left: 0;
         z-index: -1;
         transition: all 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
-        transform: translateY(-125%) rotate(-5deg);
+        transform: translateY(-100%) rotate(-5deg);
     }
     .main-nav ol li:hover ol {
         transform: translateY(0) translateZ(-1px);
@@ -391,7 +391,7 @@ h3 {
         display: block;
         position: absolute;
         top: 100%;
-        transform: translateY(-110%) translateZ(-5px);
+        transform: translateY(-100%) translateZ(-5px);
         transform-origin: top right;
         z-index: -1;
         width: 120%;
